--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60b320b1",
+   "id": "93a13fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbc8fbaa",
+   "id": "0b7b48b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "        return np.dot(self.weights, self.input) + self.bias\n",
     "    \n",
     "    def backward(self, output_gradient, learning_rate):\n",
-    "        weights_gradient = "
+    "        weights_gradient = np"
    ]
   }
  ],
