--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "93a13fcc",
+   "id": "d4626ee0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b7b48b8",
+   "id": "079fe0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,11 @@
     "        return np.dot(self.weights, self.input) + self.bias\n",
     "    \n",
     "    def backward(self, output_gradient, learning_rate):\n",
-    "        weights_gradient = np"
+    "        weights_gradient = np.dot(output_gradient, self.input.T)\n",
+    "        input_gradient = np.dot(self.weights.T, output_gradient)\n",
+    "        self.weights -= learning_rate * weights_gradient\n",
+    "        self.bias -= learning_rate * output_gradient\n",
+    "        return input_gradient"
    ]
   }
  ],
