--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d4626ee0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "079fe0c5",
    "metadata": {},
    "outputs": [],
@@ -33,11 +33,65 @@
     "        self.bias -= learning_rate * output_gradient\n",
     "        return input_gradient"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ab485d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ActivationLayer(Layer):\n",
+    "    def __init__(self, activation, activation_prime):\n",
+    "        self.activation = activation\n",
+    "        self.activation_prime = activation_prime\n",
+    "    \n",
+    "    def forward(self, input):\n",
+    "        self.input = input\n",
+    "        return self.activation(input)\n",
+    "\n",
+    "    def backward(self, output_gradient):\n",
+    "        return self.activation_prime(self.input) * output_gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dcafa9e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tanh(x):\n",
+    "    return np.tanh(x)\n",
+    "\n",
+    "def tanh_prime(x):\n",
+    "    return 1 - np.tanh(x) ** 2\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def sigmoid_prime(x):\n",
+    "    return sigmoid(x) * (1 - sigmoid(x))\n",
+    "\n",
+    "def mse(y_true, y_pred):\n",
+    "    return np.mean((y_true - y_pred) ** 2)\n",
+    "\n",
+    "def mse_prime(y_true, y_pred):\n",
+    "    return 2 * (y_pred - y_true) / y_true.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40ec2549",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +105,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4262996796ccd152c4bcd86d9185af1e04ffaf5dc13e7a05dd024cbc2c541eef"
+   }
   }
  },
  "nbformat": 4,
